feat(encoding): convert indexe series to utf-8

--- a/indexe247.html
+++ b/indexe247.html
@@ -8,7 +8,7 @@
         <meta name="robots" content="index,follow" />
         <meta name="description" content="Задавали ли Вы себе когда-нибудь вопрос: "Как написать гениальную статью?" Не когда-нибудь в будущем, а сейчас - сесть и написать, имея просто идею. За пару-тройку часов. И чтобы читатель не мог оторваться от нее до последней точки, а потом еще отправил ссылку другу и скопировал себе в блог.  ...&#8232;Нет, это все мелочи, правда? Другое дело, когда Вас узнают по Вашим статьям в офлайне, предлагают сотрудничество крупные компании, а восторженные читатели пишут Вам и говорят "Спасибо!" ;)  Вы мечтали когда-нибудь быть известным автором? Порхающими пальцами создавать магию в сознании тысяч людей! Увлекать читателя в полет Вашего воображения...  А быть гениальным копирайтером, чьи тексты монетизируют все, о чем бы Вы не рассказывали в них? Да еще и не продавая ничего напрямую!" />
         <meta name="keywords" content="как писать статьи, нлп" />
-        <meta http-equiv="Content-Type" content="text/html; charset=windows-1251" />
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <link rel="alternate" type="application/rss+xml" title="RSS 2.0" href="rss/index.html" />
         <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
         
