--- a/printe13d.html
+++ b/printe13d.html
@@ -2,7 +2,7 @@
 <title>Привычка говорить “нет” и три стадии Духа</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=4E901C21-F46D2-6EAE3B68 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:01:48 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='привычка'>
 <meta name="description" content='Ницше сказал, что жизнь, это мост от человека к сверх-человеку, и он состоит из трех этапов: верблюда, льва и ребенка. И способность сказать "нет", это только середина пути.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
