--- a/printe20f.html
+++ b/printe20f.html
@@ -1,10 +1,10 @@
 <html>
-<title>Ñîâðåìåííûå êîíöåïöèè Íîâîãî Êîäà ÍËÏ</title>
+<title>Современные концепции Нового Кода НЛП</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=ED6DD7F4-F4484-387E55A2 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:59:38 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<meta name="keywords" content='íîâûé êîä íëï'>
-<meta name="description" content='Íîâåéøèé Íîâûé Êîä ÍËÏ. Ìàòåðèàëû, êîòîðûå ñîçäàþòñÿ ñåé÷àñ â Ëàáîðàòîðèè ÍåîÊîäà.'>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="keywords" content='новый код нлп'>
+<meta name="description" content='Новейший Новый Код НЛП. Материалы, которые создаются сейчас в Лаборатории НеоКода.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,15 +14,15 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Ñîâðåìåííûå êîíöåïöèè Íîâîãî Êîäà ÍËÏ</h1><a href=indexe20f.html?id=ED6DD7F4-F4484-387E55A2 class=slink>web-âåðñèÿ</a><p><span class='print'><P><ul><li><h2><a href='851C6553-F4374-FBE82011.html'>Íîâûé Êîä ÍËÏ - îïûò ïåðâîãî êëàññà</a></h2>Î êîíöåïöèè ÷åòûðåõ êëàññîâ îïûòà Òîíè Ðîááèíñà è Íîâîì Êîäå ÍËÏ.</li><li><h2><a href='C773D62B-F4430-6810A2BE.html'>Î ñöåíàðèè æèçíè è ëîâóøêàõ óñïåõà</a></h2>Êàê ìû ñîçäàåì ñîáñòâåííóþ ñóäüáó, è êàê ìû åå ìîæåì èçìåíèòü.</li><li><h2><a href='AE002897-F447B-FE15F0F3.html'>Êàðòà ëè÷íîñòíîãî ðàçâèòèÿ</a></h2>Î÷åíü ÷àñòî áûâàåò äîñòàòî÷íî âíåñòè èçìåíåíèÿ â îäíó - êëþ÷åâóþ îáëàñòü ñâîåé æèçíè, ÷òîáû âñÿ æèçíü ðàäèêàëüíî èçìåíèëàñü â ëó÷øóþ ñòîðîíó. Êàê âûÿâèòü òå ñâîè îãðàíè÷åíèÿ, ñ êîòîðûìè íóæíî ðàçîáðàòüñÿ â ïåðâóþ î÷åðåäü?</li><li><h2><a href='7F01E38B-F459F-693615CC.html'>Áèçíåñ "â ïîòîêå"</a></h2>Î òîì, êàê óïðàâëåíèå ñîñòîÿíèÿìè èñïîëüçóåòñÿ â áèçíåñå.</li><li><h2><a href='E9C8323C-F45AA-E174FB9E.html'>Ìåòà-ñèñòåìíûå óðîâíè èëè êîììóíèêàöèÿ ñ Êîëëåêòèâíûì Áåññîçíàòåëüíûì</a></h2>Êîëëåêòèâíûé ðàçóì, êàê ñèñòåìà áîëüøåãî ìàñøòàáà. Ìåõàíèçì òåõíèêè.</li><li><h2><a href='21BE0682-F42C4-46DA02B6.html'>Òåõíîëîãèÿ "Âîëøåáíàÿ ïàëî÷êà" èëè Êàê çàêàçàòü æåëàíèå êîëëåêòèâíîìó áåññîçíàòåëüíîìó</a></h2>Òåõíîëîãèÿ çàêàçà æåëàíèé äëÿ èñïîëíåíèÿ.</li></ul> </P>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Современные концепции Нового Кода НЛП</h1><a href=indexe20f.html?id=ED6DD7F4-F4484-387E55A2 class=slink>web-версия</a><p><span class='print'><P><ul><li><h2><a href='851C6553-F4374-FBE82011.html'>Новый Код НЛП - опыт первого класса</a></h2>О концепции четырех классов опыта Тони Роббинса и Новом Коде НЛП.</li><li><h2><a href='C773D62B-F4430-6810A2BE.html'>О сценарии жизни и ловушках успеха</a></h2>Как мы создаем собственную судьбу, и как мы ее можем изменить.</li><li><h2><a href='AE002897-F447B-FE15F0F3.html'>Карта личностного развития</a></h2>Очень часто бывает достаточно внести изменения в одну - ключевую область своей жизни, чтобы вся жизнь радикально изменилась в лучшую сторону. Как выявить те свои ограничения, с которыми нужно разобраться в первую очередь?</li><li><h2><a href='7F01E38B-F459F-693615CC.html'>Бизнес "в потоке"</a></h2>О том, как управление состояниями используется в бизнесе.</li><li><h2><a href='E9C8323C-F45AA-E174FB9E.html'>Мета-системные уровни или коммуникация с Коллективным Бессознательным</a></h2>Коллективный разум, как система большего масштаба. Механизм техники.</li><li><h2><a href='21BE0682-F42C4-46DA02B6.html'>Технология "Волшебная палочка" или Как заказать желание коллективному бессознательному</a></h2>Технология заказа желаний для исполнения.</li></ul> </P>
 <P>
-</span><p><a href=indexe20f.html?id=ED6DD7F4-F4484-387E55A2 class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+</span><p><a href=indexe20f.html?id=ED6DD7F4-F4484-387E55A2 class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -83,7 +83,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -105,7 +105,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
