--- a/printe973.html
+++ b/printe973.html
@@ -2,7 +2,7 @@
 <title>Чистое сознание</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=C6AED596-F4705-1392F2C8 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:01:52 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='сознание'>
 <meta name="description" content='Почему люди хотят просветления? Для кого-то это “что-то из серии мистического”, а для кого-то... главная цель жизни. Но что они в нем нашли?'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
