--- a/printebcc.html
+++ b/printebcc.html
@@ -1,10 +1,10 @@
 <html>
-<title>Õîðîøåå è ïëîõîå</title>
+<title>Хорошее и плохое</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=8DBBC4B9-F45F5-CE624629 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:30:55 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<meta name="keywords" content='äçåí'>
-<meta name="description" content='Ïðèò÷à èç ñáîðíèêà 101 èñòîðèÿ äçåí.'>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="keywords" content='дзен'>
+<meta name="description" content='Притча из сборника 101 история дзен.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,13 +14,13 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Õîðîøåå è ïëîõîå</h1><a href=indexebcc.html?id=8DBBC4B9-F45F5-CE624629 class=slink>web-âåðñèÿ</a><p><span class='print'><p>Êîãäà Áàíêýé íåäåëÿìè çàòâîðÿëñÿ ñ ó÷åíèêàìè äëÿ ìåäèòàöèè, íà ýòî âðåìÿ ê íåìó ñõîäèëèñü ó÷åíèêè ñî âñåõ êîíöîâ ßïîíèè. Êàê-òî íà òàêîì ñîáðàíèè îäèí ó÷åíèê áûë óëè÷åí â âîðîâñòâå. Äåëî áûëî äîëîæåíî Áàíêýþ ñ ïðîñüáîé èçãíàòü âèíîâíîãî. Áàíêýé íå îòðåàãèðîâàë íà æàëîáó.</p>
-<p>Íåêîòîðîå âðåìÿ ñïóñòÿ ýòîò ó÷åíèê áûë ïîéìàí îïÿòü, íî Áàíêýé è òåïåðü îñòàâèë äåëî áåç âíèìàíèÿ. Ýòî âîçìóòèëî îñòàëüíûõ ó÷åíèêîâ. Îíè ñîñòàâèëè ïåòèöèþ, â êîòîðîé ïðîñèëè ïðîãíàòü âîðà è çàÿâèëè, ÷òî èíà÷å âñå îíè, êàê îäèí, ïîêèíóò ìîíàñòûðü.</p>
-<p>Ïðî÷èòàâ ïåòèöèþ, Áàíêýé ñîçâàë âñåõ è ñêàçàë:</p>
-<p>&ldquo;Âû ðàçóìíûå áðàòüÿ-ìîíàõè. Âû çíàåòå, ÷òî õîðîøî, à ÷òî &mdash; íåò. Åñëè âû çàõîòèòå, òî ñìîæåòå óéòè è ó÷èòüñÿ ãäå-íèáóäü åùå. Íî ÷òî æå äåëàòü ýòîìó íåñ÷àñòíîìó áðàòó, êîòîðûé íå îòëè÷àåò õîðîøåå îò ïëîõîãî? Êòî æ åùå áóäåò ó÷èòü åãî, åñëè íå ÿ? ß íàìåðåí îñòàâèòü åãî çäåñü, äàæå åñëè óéäåòå âû âñå&rdquo;.</p>
-<p>Ñëåçû ïîòîêîì çàëèëè ëèöî âèíîâíîãî. Ñòðàñòü ê âîðîâñòâó ïðîïàëà.</p>
-<p align="right"><em>101 èñòîðèÿ äçåí<br />
-</em><font size="1"><em>îïóáëèêîâàíî íà NLPING.ru 14.08.2007</em></font></p>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Хорошее и плохое</h1><a href=indexebcc.html?id=8DBBC4B9-F45F5-CE624629 class=slink>web-версия</a><p><span class='print'><p>Когда Банкэй неделями затворялся с учениками для медитации, на это время к нему сходились ученики со всех концов Японии. Как-то на таком собрании один ученик был уличен в воровстве. Дело было доложено Банкэю с просьбой изгнать виновного. Банкэй не отреагировал на жалобу.</p>
+<p>Некоторое время спустя этот ученик был пойман опять, но Банкэй и теперь оставил дело без внимания. Это возмутило остальных учеников. Они составили петицию, в которой просили прогнать вора и заявили, что иначе все они, как один, покинут монастырь.</p>
+<p>Прочитав петицию, Банкэй созвал всех и сказал:</p>
+<p>&ldquo;Вы разумные братья-монахи. Вы знаете, что хорошо, а что &mdash; нет. Если вы захотите, то сможете уйти и учиться где-нибудь еще. Но что же делать этому несчастному брату, который не отличает хорошее от плохого? Кто ж еще будет учить его, если не я? Я намерен оставить его здесь, даже если уйдете вы все&rdquo;.</p>
+<p>Слезы потоком залили лицо виновного. Страсть к воровству пропала.</p>
+<p align="right"><em>101 история дзен<br />
+</em><font size="1"><em>опубликовано на NLPING.ru 14.08.2007</em></font></p>
 <p align="center"><font size="2" face="Verdana"><a name='vote'></a><script type='text/javascript'>
 function light(num){
     if(num >= 1) document.getElementById('star1').className = 'active';
@@ -43,16 +43,16 @@ function voted(){
 }
 </script>
     <div class='mark' style='white-space: nowrap; width: 208px; overflow: hidden; float: left;'>
-    <div class='service'>Îöåíèòü:</div>
+    <div class='service'>Оценить:</div>
     <div class='stars' id='stars'>
-    <a href='setup092a.html?id=8DBBC4B9-F45F5-CE624629&amp;vote=1&amp;close=1' target='_blank' title='Óæàñíî!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup1ee7.html?id=8DBBC4B9-F45F5-CE624629&amp;vote=2&amp;close=1' target='_blank' title='Ïëîõî'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup3846.html?id=8DBBC4B9-F45F5-CE624629&amp;vote=3&amp;close=1' target='_blank' title='Ñðåäíå'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setupa8c9.html?id=8DBBC4B9-F45F5-CE624629&amp;vote=4&amp;close=1' target='_blank' title='Õîðîøî'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup2fc8.html?id=8DBBC4B9-F45F5-CE624629&amp;vote=5&amp;close=1' target='_blank' title='Îòëè÷íî!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup092a.html?id=8DBBC4B9-F45F5-CE624629&amp;vote=1&amp;close=1' target='_blank' title='Ужасно!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup1ee7.html?id=8DBBC4B9-F45F5-CE624629&amp;vote=2&amp;close=1' target='_blank' title='Плохо'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup3846.html?id=8DBBC4B9-F45F5-CE624629&amp;vote=3&amp;close=1' target='_blank' title='Средне'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupa8c9.html?id=8DBBC4B9-F45F5-CE624629&amp;vote=4&amp;close=1' target='_blank' title='Хорошо'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup2fc8.html?id=8DBBC4B9-F45F5-CE624629&amp;vote=5&amp;close=1' target='_blank' title='Отлично!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
     </div>
     <div class='line' id='line'></div>
-    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Ñïàñèáî!</div>
+    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Спасибо!</div>
     </div> <div style='padding-top: 10px;'><!-- AddThis Button BEGIN -->
 <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 <a class="addthis_button_facebook"></a>
@@ -75,12 +75,12 @@ function voted(){
 
 <script type="text/javascript">var addthis_config = {"data_track_clickback":true};</script>
 <script type="text/javascript" src="../s7.addthis.com/js/250/addthis_widget.js#pubid=nlping"></script>
-<!-- AddThis Button END --></div> <div class='relateditems'><p>Ëó÷øèå ìàòåðèàëû ðàçäåëà &quot;Áàéêè è ïðèò÷è&quot;</p> <ul><li><a href='11EFAB56-F4620-8C197C8C.html' title='ÍËÏåðñêàÿ áàéêà.'>Ñàìàÿ âêóñíàÿ êîíôåòà</a></li><li><a href='F47A4.html' title='Ñêàçêà äëÿ âçðîñëûõ ïðî íè÷åãî-íå-íåäåëàíèå è ñìûñë.'>Ïðèò÷à "Ãîâîðÿùàÿ ðûáà"</a></li><li><a href='F479F.html' title='Ìíîãèå èç íàñ õîòÿò íà÷àòü ÷òî-òî íîâîå, íî íå ìíîãèå ýòî äåëàþò. Ïî÷åìó? Ïîòîìó ÷òî ìû ïðèâûêëè ê òîìó ÷òî èìååì, êàêèì áû îíî íè áûëî. È ïðè ìûñëè îá èçìåíåíèÿõ ó ìíîãèõ èç íàñ ïîÿâëÿåòñÿ ñòðàõ... '>Ïðèâû÷êè, ñòðàõè è óñïåõ</a></li><li><a href='F471C.html' title='Ïðèò÷à îò Íèëà Äîíàëüäà Óîëøà ïðî òî, êàê âàæíî ïîìíèòü, êòî ìû...'>Ìàëåíüêàÿ äóøà è ñîëíöå</a></li><li><a href='B3682F35-F4707-7A393FEE.html' title='Ïðî ìå÷òó è æèçíåííûé ïóòü.'>Èñòîðèÿ îäíîãî êëåðêà</a></li></ul></div> 
-<h3>Êîììåíòàðèè Facebook</h3>
+<!-- AddThis Button END --></div> <div class='relateditems'><p>Лучшие материалы раздела &quot;Байки и притчи&quot;</p> <ul><li><a href='11EFAB56-F4620-8C197C8C.html' title='НЛПерская байка.'>Самая вкусная конфета</a></li><li><a href='F47A4.html' title='Сказка для взрослых про ничего-не-неделание и смысл.'>Притча "Говорящая рыба"</a></li><li><a href='F479F.html' title='Многие из нас хотят начать что-то новое, но не многие это делают. Почему? Потому что мы привыкли к тому что имеем, каким бы оно ни было. И при мысли об изменениях у многих из нас появляется страх... '>Привычки, страхи и успех</a></li><li><a href='F471C.html' title='Притча от Нила Дональда Уолша про то, как важно помнить, кто мы...'>Маленькая душа и солнце</a></li><li><a href='B3682F35-F4707-7A393FEE.html' title='Про мечту и жизненный путь.'>История одного клерка</a></li></ul></div> 
+<h3>Комментарии Facebook</h3>
 <div id="fb-root"></div>
 <div class="fb-comments" data-href="http://nlping.ru/8DBBC4B9-F45F5-CE624629" data-num-posts="100" data-width="600"></div>
 
-<h3>Êîììåíòàðèè Âêîíòàêòå</h3>
+<h3>Комментарии Вконтакте</h3>
 <div id="vk_comments"></div>
 <script type="text/javascript">
 VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
@@ -103,13 +103,13 @@ VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
     })();
 </script>
  </font></p>
-</span><p><a href=indexebcc.html?id=8DBBC4B9-F45F5-CE624629 class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+</span><p><a href=indexebcc.html?id=8DBBC4B9-F45F5-CE624629 class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -170,7 +170,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -192,7 +192,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
