--- a/printefc5.html
+++ b/printefc5.html
@@ -2,7 +2,7 @@
 <title>НЛП - это про что?</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=7420CED6-F461C-B2368737 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:55:06 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='нлп'>
 <meta name="description" content='НЛП - это не про манипуляцию, не про психотерапию и даже не про эффективную коммуникацию... И в то же время про все это вместе и кое что еще.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
