--- a/printe218.html
+++ b/printe218.html
@@ -1,10 +1,10 @@
 <html>
-<title>Äçåí ñåáÿ</title>
+<title>Дзен себя</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=D854A222-F45BE-76241223 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:10:52 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<meta name="keywords" content='íëï'>
-<meta name="description" content='Î ìèññèè è ñìûñëå æèçíè.'>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="keywords" content='нлп'>
+<meta name="description" content='О миссии и смысле жизни.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,20 +14,20 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Äçåí ñåáÿ</h1><a href=indexe218.html?id=D854A222-F45BE-76241223 class=slink>web-âåðñèÿ</a><p><span class='print'><p>ÍËÏåð ñ Ôè Ãó Íàòå áûëè ñòàðûìè äðóçüÿìè, õîðîøî çíàëè äçåí äðóã äðóãà è íå çàäàâàëè ëèøíèõ âîïðîñîâ ïîïóñòó. Íî êàê-òî ÍËÏåðó íå õâàòèëî ñâîèõ ìîçãîâ (òî ëè òðåòèé ãëàç çàëèï, òî ëè&nbsp;êîííåêò çà ãðåõè îáðóáèëè), è îí ðåøèë ñïðîñèòü:</p>
-<p>- Ïîñëóøàé, à òû íå çíàåøü, êàê ìîæíî óçíàòü ñâîþ ìèññèþ?<br />
-- Êàêóþ èç íèõ? - óëûáíóëñÿ Ìàñòåð.<br />
-- Íåò, òû íå ïîíÿë, - ñêàçàë ÍËÏåð - ÿ õî÷ó íàéòè ñâîé ïóòü.<br />
-- Êóäà? - óòî÷íèë Ôè Ãó Íàòå.<br />
-- Äà íå êóäà, à âîîáùå, - âçìîëèëñÿ ÍËÏåð - ÿ õî÷ó ïîíÿòü, ÷òî ìíå äåëàòü, ÷òîáû áûòü ïîëåçíûì ëþäÿì!<br />
-- À, - óñïîêîèëñÿ Ìàñòåð. - Íó ñõîäè çà âîäîé òîãäà, ÷òî ëè.</p>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Дзен себя</h1><a href=indexe218.html?id=D854A222-F45BE-76241223 class=slink>web-версия</a><p><span class='print'><p>НЛПер с Фи Гу Нате были старыми друзьями, хорошо знали дзен друг друга и не задавали лишних вопросов попусту. Но как-то НЛПеру не хватило своих мозгов (то ли третий глаз залип, то ли&nbsp;коннект за грехи обрубили), и он решил спросить:</p>
+<p>- Послушай, а ты не знаешь, как можно узнать свою миссию?<br />
+- Какую из них? - улыбнулся Мастер.<br />
+- Нет, ты не понял, - сказал НЛПер - я хочу найти свой путь.<br />
+- Куда? - уточнил Фи Гу Нате.<br />
+- Да не куда, а вообще, - взмолился НЛПер - я хочу понять, что мне делать, чтобы быть полезным людям!<br />
+- А, - успокоился Мастер. - Ну сходи за водой тогда, что ли.</p>
 <p><br />
-Êîãäà ÍËÏåð âåðíóëñÿ ñ âîäîé, åìó ïîëåã÷àëî.</p>
-<p>- ß ïîíÿë ÷åãî ìíå íå õâàòàëî â æèçíè. Ìíå íóæíåí ñìûñë.<br />
-- Ñìûñëà â æèçíè íå ñóùåñòâóåò - îòâåòèë ìàñòåð íå îòâëåêàÿñü îò ìåäèòàöèè.<br />
-- Òîæå âàðèàíò, - çàìåòèë ïðî ñåáÿ ÍËÏåð.</p>
-<p align="right"><span class="normal"><em>Åãîð Áóëûãèí,<br />
-òðåíåð ÍËÏ<br />
+Когда НЛПер вернулся с водой, ему полегчало.</p>
+<p>- Я понял чего мне не хватало в жизни. Мне нужнен смысл.<br />
+- Смысла в жизни не существует - ответил мастер не отвлекаясь от медитации.<br />
+- Тоже вариант, - заметил про себя НЛПер.</p>
+<p align="right"><span class="normal"><em>Егор Булыгин,<br />
+тренер НЛП<br />
 </em></span><span class="normal"><em><font size="1">28.11.2006</font></em></span></p>
 <p align="center"><span class="normal"><font size="2" face="Verdana"><a name='vote'></a><script type='text/javascript'>
 function light(num){
@@ -51,16 +51,16 @@ function voted(){
 }
 </script>
     <div class='mark' style='white-space: nowrap; width: 208px; overflow: hidden; float: left;'>
-    <div class='service'>Îöåíèòü:</div>
+    <div class='service'>Оценить:</div>
     <div class='stars' id='stars'>
-    <a href='setupcaa4.html?id=D854A222-F45BE-76241223&amp;vote=1&amp;close=1' target='_blank' title='Óæàñíî!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setupf632.html?id=D854A222-F45BE-76241223&amp;vote=2&amp;close=1' target='_blank' title='Ïëîõî'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup16ad.html?id=D854A222-F45BE-76241223&amp;vote=3&amp;close=1' target='_blank' title='Ñðåäíå'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup5af2.html?id=D854A222-F45BE-76241223&amp;vote=4&amp;close=1' target='_blank' title='Õîðîøî'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setupfc12.html?id=D854A222-F45BE-76241223&amp;vote=5&amp;close=1' target='_blank' title='Îòëè÷íî!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupcaa4.html?id=D854A222-F45BE-76241223&amp;vote=1&amp;close=1' target='_blank' title='Ужасно!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupf632.html?id=D854A222-F45BE-76241223&amp;vote=2&amp;close=1' target='_blank' title='Плохо'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup16ad.html?id=D854A222-F45BE-76241223&amp;vote=3&amp;close=1' target='_blank' title='Средне'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup5af2.html?id=D854A222-F45BE-76241223&amp;vote=4&amp;close=1' target='_blank' title='Хорошо'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupfc12.html?id=D854A222-F45BE-76241223&amp;vote=5&amp;close=1' target='_blank' title='Отлично!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
     </div>
     <div class='line' id='line'></div>
-    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Ñïàñèáî!</div>
+    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Спасибо!</div>
     </div> <div style='padding-top: 10px;'><!-- AddThis Button BEGIN -->
 <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 <a class="addthis_button_facebook"></a>
@@ -83,12 +83,12 @@ function voted(){
 
 <script type="text/javascript">var addthis_config = {"data_track_clickback":true};</script>
 <script type="text/javascript" src="../s7.addthis.com/js/250/addthis_widget.js#pubid=nlping"></script>
-<!-- AddThis Button END --></div> <div class='relateditems'><p>Ëó÷øèå ìàòåðèàëû ðàçäåëà &quot;ÍËÏ äçåí&quot;</p> <ul><li><a href='1CBCC5D6-F4458-755C6468.html' title='Î ïðîñâåòëåíèè, öåëÿõ, ñìåðòè è áåñêîíå÷íîñòè.'>Äçåí áåñêîíå÷íîñòè</a></li><li><a href='07418910-F4287-EF16D006.html' title='Êàê âñå íà÷èíàëîñü.'>Äçåí áàçîâûõ ïðåñóïïîçèöèé ÍËÏ</a></li><li><a href='F4C44.html' title='Âåëèêèé ìàñòåð Ôè Ãó Íàòå âîçâðàùàåòñÿ! Òðè íîâûõ êîàíà ÍËÏ.'>ÍËÏ äçåí - 8 ëåò ñïóñòÿ</a></li></ul></div> 
-<h3>Êîììåíòàðèè Facebook</h3>
+<!-- AddThis Button END --></div> <div class='relateditems'><p>Лучшие материалы раздела &quot;НЛП дзен&quot;</p> <ul><li><a href='1CBCC5D6-F4458-755C6468.html' title='О просветлении, целях, смерти и бесконечности.'>Дзен бесконечности</a></li><li><a href='07418910-F4287-EF16D006.html' title='Как все начиналось.'>Дзен базовых пресуппозиций НЛП</a></li><li><a href='F4C44.html' title='Великий мастер Фи Гу Нате возвращается! Три новых коана НЛП.'>НЛП дзен - 8 лет спустя</a></li></ul></div> 
+<h3>Комментарии Facebook</h3>
 <div id="fb-root"></div>
 <div class="fb-comments" data-href="http://nlping.ru/D854A222-F45BE-76241223" data-num-posts="100" data-width="600"></div>
 
-<h3>Êîììåíòàðèè Âêîíòàêòå</h3>
+<h3>Комментарии Вконтакте</h3>
 <div id="vk_comments"></div>
 <script type="text/javascript">
 VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
@@ -111,13 +111,13 @@ VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
     })();
 </script>
  </font></span></p>
-</span><p><a href=indexe218.html?id=D854A222-F45BE-76241223 class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+</span><p><a href=indexe218.html?id=D854A222-F45BE-76241223 class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -178,7 +178,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -200,7 +200,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
