--- a/printe3ac.html
+++ b/printe3ac.html
@@ -2,7 +2,7 @@
 <title>Карта личностного развития</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=AE002897-F447B-FE15F0F3 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:09:37 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='новый код нлп, нлп'>
 <meta name="description" content='Очень часто бывает достаточно внести изменения в одну - ключевую область своей жизни, чтобы вся жизнь радикально изменилась в лучшую сторону. Как выявить те свои ограничения, с которыми нужно разобраться в первую очередь?'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
