--- a/printe46e.html
+++ b/printe46e.html
@@ -2,7 +2,7 @@
 <title>По материалам книги Джона Гриндера и Кармен Бостик «Шепот на ветру»</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=7747D47E-F45B2-1A8FD2BB by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:10:54 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='новый код, нлп'>
 <meta name="description" content='Основые предпосылки появления Нового Кода НЛП, его отличие от классического НЛП и основные паттерны.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
