--- a/printe81b.html
+++ b/printe81b.html
@@ -2,7 +2,7 @@
 <title>Киллеры успеха</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F487B by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:02:08 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Даже когда размышляем наедине с самим с собой, мы все равно выражаем сформулированные мысли словами во внутреннем диалоге. Наши слова становятся действиями, действия - привычками, привычки - характером, а характер определяет нашу судьбу. Поэтому очень важно следить за тем, как мы говорим о вещах, даже если разговариваем лишь с самим собой. Итак, что же это за слова-киллеры нашего успеха?'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
