--- a/printe9ce.html
+++ b/printe9ce.html
@@ -2,7 +2,7 @@
 <title>Что такое гипноз</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=13CD39D6-F428B-318238B3 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:27:03 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='гипноз, эриксоновский гипноз'>
 <meta name="description" content='Как работает гипноз. Чем отличаются друг от друга классический гипноз, эриксоновский гипноз, цыганский гипноз и разговорный гипноз.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
